// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/routes/Notifications.tsx > should render itself & its children (all read notifications) 1`] = `
<div>
  <p>
    AllRead
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (error conditions - oops) > bad credentials 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (error conditions - oops) > default error 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (error conditions - oops) > missing scopes 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (error conditions - oops) > rate limited 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (error conditions - oops) > unknown error 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (show account header) 1`] = `
<div>
  <p>
    AllRead
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render itself & its children (with notifications) 1`] = `
<div>
  <p>
    AllRead
  </p>
</div>
`;
